--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
-    "css-loader": "0.28.4",
+    "css-loader": "^0.28.11",
     "live-server": "^1.2.0",
     "moment": "2.18.1",
-    "node-sass": "4.5.3",
+    "node-sass": "^4.9.0",
     "normalize.css": "7.0.0",
     "react": "15.6.1",
     "react-addons-shallow-compare": "15.6.0",
@@ -36,5 +36,8 @@
     "validator": "8.0.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.10.0"
   }
 }
